<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="10dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">



    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            style="@style/headerTextPrimary"
            android:text="Login"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfields_register_login"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:hint="@string/login_email_hint"
                android:drawableStart="@android:drawable/sym_action_email"
                android:drawableTint="@color/black"
                android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp">
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/textfields_register_login"
                android:hint="@string/login_password_hint"
                android:maxLines="1"
                android:inputType="textPassword"
                android:drawableStart="@android:drawable/ic_lock_lock"
                android:drawableTint="@color/black"
                android:drawablePadding="10dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            style="@style/viewParent"
            android:text="Forgot Password?"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/newsMoreTextSize"
            android:layout_gravity="end"
            android:onClick="viewForgotPAssword"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnLogin"
            style="@style/loginButton"
            android:text="Login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <TextView
            style="@style/parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/primaryTextColor"
            android:text="@string/login_signup_hint"
            android:onClick="viewRegisterClicked"
            android:layout_marginTop="@dimen/loginViewsMargin"/>


    </LinearLayout>
</androidx.cardview.widget.CardView>
</layout>