<?xml version="1.0" encoding="utf-8"?>
<layout>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        tools:context=".Activities.RegisterActivity"
        style="@style/loginParent">
        <ProgressBar
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:elevation="25dp"
            android:id="@+id/pbLoading"
            android:visibility="gone"
            />
        <ScrollView
            style="@style/parent">

            <RelativeLayout
                style="@style/parent">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:weightSum="12">

                    <LinearLayout
                        style="@style/parent"
                        android:background="@drawable/login_shape_bk"
                        android:orientation="vertical"
                        android:layout_weight="3">

                        <ImageView
                            style="@style/parent"
                            android:background="@drawable/ic_login_bk"
                            android:contentDescription="login background" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical"
                    android:layout_marginTop="40dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp">


                    <TextView
                        style="@style/headerText"
                        android:id="@+id/tvHeaderText"
                        android:layout_gravity="center"
                        android:text="Register to Continue"
                        android:layout_marginTop="40dp"/>

                    <androidx.cardview.widget.CardView
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:app="http://schemas.android.com/apk/res-auto"
                        style="@style/loginCard"
                        app:cardCornerRadius="@dimen/loginCardRadius"
                        android:elevation="10dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/loginViewsMargin"
                        android:layout_marginBottom="@dimen/loginViewsMargin"
                        android:background="@color/whiteCardColor">

                        <LinearLayout
                            style="@style/linearParent"
                            android:layout_gravity="center"
                            android:padding="@dimen/loginViewsMargin">

                            <TextView
                                style="@style/headerTextPrimary"
                                android:text="@string/register"
                                android:layout_marginTop="@dimen/loginViewsMargin"/>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top"
                                app:boxStrokeWidth="0dp"
                                app:boxStrokeWidthFocused="0dp">
                                <EditText
                                    android:id="@+id/etName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/textfields_register_login"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:hint="Name"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top"
                                app:boxStrokeWidth="0dp"
                                app:boxStrokeWidthFocused="0dp">
                                <EditText
                                    android:id="@+id/etMobile"
                                    android:background="@drawable/textfields_register_login"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:inputType="text"
                                    android:maxLines="1"
                                    android:hint="Mobile Number"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top"
                                app:boxStrokeWidth="0dp"
                                app:boxStrokeWidthFocused="0dp">
                                <EditText
                                    android:id="@+id/etEmail"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/textfields_register_login"
                                    android:inputType="textEmailAddress"
                                    android:maxLines="1"
                                    android:hint="@string/login_email_hint"/>
                            </com.google.android.material.textfield.TextInputLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                style="@style/parent"
                                android:layout_marginTop="@dimen/signup_text_margin_top"
                                app:boxStrokeWidth="0dp"
                                app:boxStrokeWidthFocused="0dp">
                                <EditText
                                    android:id="@+id/etPassword"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:background="@drawable/textfields_register_login"
                                    android:hint="@string/login_password_hint"
                                    android:maxLines="1"
                                    android:inputType="textPassword"/>
                            </com.google.android.material.textfield.TextInputLayout>


                            <CheckBox
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="I accept the Terms and Conditions"
                                android:id="@+id/cbTerms"
                                android:padding="10dp"
                                />

                            <Button
                                android:layout_marginVertical="10dp"
                                style="@style/loginButton"
                                android:layout_gravity="center"
                                android:text="Register"
                                android:id="@+id/btnRegister"/>

                            <TextView
                                style="@style/parent"
                                android:textAlignment="center"
                                android:textStyle="bold"
                                android:textColor="@color/primaryTextColor"
                                android:id="@+id/tvLogin"
                                android:text="@string/signup_login_hint"
                                android:layout_marginTop="@dimen/loginViewsMargin"/>

                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginTop="30dp"
                    android:layout_marginLeft="20dp"
                    android:src="@drawable/baseline_arrow_back_ios_24"
                    android:id="@+id/ivBack"/>
            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>
</layout>